--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=backend
+
+# ===================== DATABASE =====================
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventhive_db
+spring.datasource.username=your_db_username
+spring.datasource.password=your_db_password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+# ===================== SPRING SECURITY =====================
+spring.security.user.name=admin
+spring.security.user.password=admin
